--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -4,24 +4,34 @@
   background-color: $accent-rose-color;
 
    background-image:
-  url('/../src/images/Ellipse\ 3.png');
+  url('/../src/images/ellipse.png');
   background-repeat: no-repeat;
   background-position:right;
   @media screen and(min-width:$tablet) {
     width: 100%;
-    max-width: 1199px;
-    height: 399px;
+    max-width: 1279px;
+    height: 407px;
      background-image: 
      url('/../src/images/Ellipse.t.png');
   background-repeat: no-repeat;
   background-position:top 31px right 137px;
   }
+  @media screen and(min-width:$desktop) {
+    width: 100%;
+    
+    height: 665px;
+     background-image: 
+     url('/../src/images/Ellipse.t.png');
+  background-repeat: no-repeat;
+  background-position:top 31px right 137px;
+  }
+
   
   &__container {
     padding: 0;
   }
   &__ice-cream {
-    position: fixed;
+    position: absolute;
     top: 92px;
     right: 32px;
     @media screen and(min-width:$tablet){
@@ -38,15 +48,16 @@
     display: none;
     @media screen and(min-width:$tablet){
     display: block;
-    position: fixed;
+    position: absolute;
     right: 34px;
-    bottom: 8px;
+    top: 266px;
   }
     @media screen and(min-width:$desktop){
     display: block;
-    position: fixed;
-    right: 110px;
+    position: absolute;
+     right: 110px;
     top: 433px;
+   
   }
   }
 
@@ -54,20 +65,20 @@
     display: none;
      @media screen and(min-width:$tablet){
     display: block;
-    position: fixed;
+    position: absolute;
     left: 34px;
-    bottom: 36px;
+    top: 245px;
   }
     @media screen and(min-width:$desktop){
     display: block;
-    position: fixed;
+    position: absolute;
     left: 76px;
-    bottom: 46px;
+    top: 429px;
   }
   }
 
   &__title {
-    position: fixed;
+    position: absolute;
     top: 193px;
     left: 20px;
     
@@ -80,16 +91,22 @@
     color: $white-color;
 
     @media screen and(min-width:$tablet){
-      position: fixed;
+      position: absolute;
     top: 102px;
     left: 34px;
     font-family: Titan One;
     font-weight: 400;
     font-size: 22px;
     line-height: 25px;
+    }
+    @media screen and(min-width:$desktop){
+      position: absolute;
+    top: 171px;
+    left: 114px;
+    font-size: 38px;
+    line-height: 44px;
 
 
-    color: #FFFFFF;
     }
    }
   &__title-passion {
@@ -107,7 +124,7 @@
     }
   }
   &__products-btn {
-    position: fixed;
+    position: absolute;
     top: 318px;
     left: 20px;
     font-weight: 400;
@@ -124,10 +141,19 @@
     @media screen and(min-width:$tablet){
       top: 202px;
     left: 34px;
+
+    }
+    @media screen and(min-width:$desktop){
+      width: 104px;
+      height: 40px;
+      top: 333px;
+      left: 114px;
+      font-size: 14px;
+      line-height: 18px;
     }
   }
   &__made-btn {
-    position: fixed;
+    position: absolute;
     top: 318px;
     left: 90px;
     font-weight: 400;
@@ -144,5 +170,92 @@
     top: 202px;
     left: 104px;
     }
+    @media screen and(min-width:$desktop){
+      width: 138px;
+      height: 40px;
+      top: 333px;
+      left: 233px;
+      font-size: 14px;
+      line-height: 18px;
+    }
+    
   }
+  &__round-btn{
+      position: absolute;
+      top: 583px;
+      left: 294px;
+      display: block;
+      width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: $white-color;
+    color: $accent-red-color;
+    }
+  &__lorem{
+    display: none;
+    @media screen and(min-width:$desktop){
+      display: block;
+    position: absolute;
+    top: 485px;
+    left: 294px;
+    width: 200px;
+    height: 78px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: $white-color;
+    }
+  }
+  &__cafes{
+      display: none;
+      @media screen and(min-width:$tablet){
+        display:block;
+        width: 43px;
+        height: 44px;
+        position: absolute;
+        top: 94px;
+        right: 34px;
+        overflow: hidden;
+        z-index: 10;
+        // &::before{
+        //   content: "";
+        //   display: inline-block;
+        //   width: 16px;
+        //   height: 16px;
+        //   background-color: $white-color;
+        //   border-radius: 50%;
+        //   position: absolute;
+        //   left: 0;
+        //   z-index: 1;
+        // }
+      }
+      @media screen and(min-width:$desktop){
+        display:block;
+        width: 72px;
+        height: 77px;
+       
+        top: 156px;
+        right: 98px;
+      }
+    }
+    &__trucks{
+      display: none;
+      @media screen and(min-width:$tablet){
+        display:block;
+        width: 51px;
+        height: 43px;
+        position: absolute;
+        top: 151px;
+        right: 34px;
+      }
+      @media screen and(min-width:$desktop){
+        display:block;
+        width: 92px;
+        height: 76px;
+        top: 248px;
+        right: 98px;
+      }
+    }
 }
