--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -25,6 +25,9 @@
     @media screen and(min-width:$tablet){
      margin-left: 291px;
     margin-right: 30px;
+    @media screen and(min-width:$desktop){
+      display: none;
+    }
     }
    
   }
@@ -39,16 +42,13 @@
   position: fixed;
   top: 0;
   right: 0;
+  display: none;
   transform: translateX(100%)  ;
   background-color: $background-color-mob-menu;
-  z-index: 1;
+  z-index: 100;
   width: 250px;
   height: 100vh;
-  display: flex;
-  opacity: 0;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  
   transition: $trans-duration $trans-time-func;
   @media screen and (min-width:$tablet){
     width: 254px;
@@ -105,10 +105,10 @@
     background-color: $white-color;
     font-family: DM Sans;
 
-font-weight: 700;
-font-size: 16px;
-line-height: 21px;
-color: $accent-red-color;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    color: $accent-red-color;
     }
     
   }
@@ -120,14 +120,14 @@ color: $accent-red-color;
   }
 }
 .menu.is-open {
-  opacity: 1;
-  transform: translateX(0)  ;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transform: translateX(0);
   transition:  $trans-duration $trans-time-func;
 }
 
-.menu.is-open  {
- display: flex;
-}
 
 .menu-nav {
   width: 100%;
