--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -1,7 +1,7 @@
 <section class="locations">
     <div class="container">
         <h2 class="visually-hidden">Contacts</h2>
-        <ul class="locations__list list">
+        <ul class="list locations__list">
 
             <li class="locations__item">
                 <p class="locations__title first">Cafe</p>
