--- a/src/sass/layout/_locations.scss
+++ b/src/sass/layout/_locations.scss
@@ -14,9 +14,15 @@
     }
  }
 
+    .locations__list {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
      .locations__item {
          width: 220px;
-         height: 427px;
          padding: 43px 21px;
          background: var(--light-text-color);
          box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
@@ -24,10 +30,6 @@
 
          &:not(:last-child) {
              margin-bottom: 20px;
-         }
-
-         &:last-child {
-             margin-bottom: 54px;
          }
      }
 
@@ -76,8 +78,9 @@
              position: absolute;
              display: block;
              width: 100%;
+             height: 1px;
              bottom: -25px;
-             border: 1px solid var(--gradient-line-color);
+             background-color: var(--gradient-line-color);
          }
      }
 
@@ -91,8 +94,9 @@
               position: absolute;
               display: block;
               width: 100%;
+              height: 1px;
               bottom: -25px;
-              border: 1px solid var(--gradient-line-color);
+              background-color: var(--gradient-line-color);
           }
      } 
 
@@ -123,7 +127,7 @@
      }
 
      .locations__buttons {
-        // height: 44px;
+        margin-top: 54px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -163,18 +167,16 @@
      }
 
      .button--secondary .button__icon-right {
-         fill: white;
+         fill: var(--light-text-color);
      }
 
 
 
 
 @media screen and (min-width: $tablet) {
-    .locations__list {
-        display: flex;
+    .locations__list {        
+        flex-direction: row;
     }
-
-
 
     .locations__item {
         height: 544px;
@@ -182,6 +184,7 @@
 
         &:not(:last-child) {
             margin-right: 20px;
+            margin-bottom: 0;
         }
     }
 
@@ -231,7 +234,8 @@
     }
     
     .locations__buttons {
-        flex-direction: initial;
+        flex-direction: row;
+        justify-content: center;
     }
 
     .button--secondary {
@@ -246,11 +250,12 @@
 }
 
 @media screen and (min-width: $desktop) {
-    // .locations {
-    //     background-image: url('../images/8-locations/locations-bg@2x.png');
-    //     background-repeat: no-repeat;
-    //     background-size: contain;
-    // }
+     .locations {
+        background-image: url('../images/svg/bgi-locations.svg');
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+    }
 
 
     .locations__item {
