--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,47 +1,64 @@
-<footer class="footer-section footer">
-  <div class="container">
+<footer class="footer-section">
+  <div class="container footer">
     <div class="service">
-      <p>HOMEMADE ICE CREAM MADE</p>
-      <h2>WITH PASSION</h2>
+      <p class="service-label">HOMEMADE ICE CREAM MADE</p>
+      <h2 class="service-text">WITH PASSION</h2>
     </div>
     <div class="contacts-footer">
       <div class="footer-links">
         <ul class="list social-list-footer">
           <li class="social-list-footer-item">
-            <a class="social-list-footer-link" href="https://www.github.com/" target="_blank" rel=""
-              aria-label="ссылка Гитхаб">
-              <svg class="social-list-footer-icon" width="34" height="34">
-                <use href=""></use>
+            <a
+              class="social-list-footer-link"
+              href="https://www.github.com/"
+              target="_blank"
+              rel=""
+              aria-label="ссылка Гитхаб"
+            >
+              <svg class="social-list-footer-icon" width="20" height="20">
+                <use href="./images/footer/sprite77.svg#icon-github"></use>
               </svg>
             </a>
           </li>
           <li class="social-list-footer-item">
-            <a class="social-list-footer-link" href="https://www.tlgrm.ru/" target="_blank" rel=""
-              aria-label="ссылка Телеграм">
-              <svg class="social-list-footer-icon" width="34" height="34">
-                <use href=""></use>
+            <a
+              class="social-list-footer-link"
+              href="https://www.tlgrm.ru/"
+              target="_blank"
+              rel=""
+              aria-label="ссылка Телеграм"
+            >
+              <svg class="social-list-footer-icon" width="20" height="20">
+                <use href="./images/footer/sprite77.svg#icon-telegram"></use>
               </svg>
             </a>
           </li>
           <li class="social-list-footer-item">
-            <a class="social-list-footer-link" href="https://www.facebook.com/" target="_blank" rel=""
-              aria-label="ссылка Фейсбук">
-              <svg class="social-list-footer-icon" width="34" height="34">
-                <use href=""></use>
+            <a
+              class="social-list-footer-link"
+              href="https://www.facebook.com/"
+              target="_blank"
+              rel=""
+              aria-label="ссылка Фейсбук"
+            >
+              <svg class="social-list-footer-icon" width="20" height="20">
+                <use href="./images/footer/sprite77.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
         </ul>
       </div>
       <div class="contact-telephone">
-        <p>
+        <p class="contact-text">
           Feel free to contact
-          <a class="contacts-telephone-link" href="tel:+610383766284">+61 (0) 383 766 284</a>
+          <a class="contacts-telephone-link" href="tel:+610383766284"
+            >+61 (0) 383 766 284</a
+          >
         </p>
       </div>
     </div>
     <div class="copyright">
-      <p>© 2019 - IceCream. All Rights Reserved.</p>
+      <p class="copyright-text">© 2019 - IceCream. All Rights Reserved.</p>
     </div>
   </div>
 </footer>
