desktop styles added

--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -93,3 +93,29 @@
     font-size: 14px;
   }
 }
+
+// Tablet styles
+@media screen and (min-width: $desktop) {
+  .advantages__list {
+    .advantages__item {
+      width: 330px;
+
+      &:not(:last-child) {
+        margin-right: 30px;
+      }
+
+      &::before {
+        margin-bottom: 40px;
+      }
+    }
+  }
+
+  .advantages__text {
+    margin-bottom: 15px;
+    font-size: 58px;
+  }
+
+  .advantages__description {
+    font-size: 16px;
+  }
+}
