removed some stuff

--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -1,9 +1,3 @@
-// .container {
-//   width: 280px;
-//   margin: 0 auto;
-//   // outline: 1px solid sandybrown;
-// }
-
 .advantages {
   padding-top: 20px;
   padding-bottom: 48px;
@@ -116,7 +110,7 @@
   }
 }
 
-// Tablet styles
+// Desktop styles
 @media screen and (min-width: $desktop) {
   .advantages__list {
     .advantages__item {
