--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -64,6 +64,23 @@
                 </div>
             </button>
         </div>
+        <div class="hero-icecone-img">
+            <picture>
+                <source srcset="./images/hero-images/d-hero-icecone-wp.webp 1x, 
+                        ./images/hero-images/d-hero-icecone-wp@2x.webp 2x" media="(min-width: 1200px)" type="image/webp">
+        
+                <source srcset="./images/hero-images/d-hero-icecone.png 1x, 
+                        ./images/hero-images/d-hero-icecone@2x.png 2x" media="(min-width: 1200px)">
+        
+                <source srcset="./images/hero-images/t-hero-icecone-wp.webp 1x, 
+                        ./images/hero-images/t-hero-icecone-wp@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
+        
+                <source srcset="./images/hero-images/t-hero-icecone.png 1x, 
+                        ./images/hero-images/t-hero-icecone@2x.png 2x" media="(min-width: 768px)">
+        
+                <img src="./images/hero-images/hero-alt-icecone.png" alt="jug of icecone">
+            </picture>
+        </div>
         <div class="hero-tasty-img">
             <picture>
                 <source 
