--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,6 @@
   <div class="container outline">
     <div class="footer__wrapper">
       <div class="footer__slogan">
-        <!-- <p class="footer__slogan--small-text">homemade ice cream made</p> -->
         <p class="subtitle">homemade ice cream made</p>
         <p class="title">with passion</p>
       </div>
@@ -16,8 +15,8 @@
               target="_blank"
               aria-label="Github"
             >
-              <svg width="19" height="19">
-                <use href="./images/svg/sprites.svg#icon-github"></use>
+              <svg width="20" height="20">
+                <use href="./images/svg/sprites.svg#icon-githubb"></use>
               </svg>
             </a>
           </li>
@@ -28,15 +27,9 @@
               target="_blank"
               aria-label="Telegram"
             >
-              <!-- <svg  width="20" height="20">
-                <use href="./images/svg/sprites.svg#icon-telegram"></use>
-              </svg> -->
-              <img
-                src="./images/svg/telegram.svg"
-                alt="Macbook Air на сером деревянном столе"
-                width="20"
-                height="20"
-              />
+              <svg  width="20" height="16">
+                <use href="./images/svg/sprites.svg#icon-telegramm-1"></use>
+              </svg>
             </a>
           </li>
           <li class="social-networks__item">
@@ -46,8 +39,8 @@
               target="_blank"
               aria-label="Facebook"
             >
-              <svg width="20" height="20">
-                <use href="./images/svg/sprites.svg#icon-facebook"></use>
+              <svg width="10" height="20">
+                <use href="./images/svg/sprites.svg#icon-facebookk"></use>
               </svg>
             </a>
           </li>
