--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -43,7 +43,7 @@
   }
 }
 
-.footer__slogan--small-text {
+.footer .subtitle {
   margin-bottom: 17px;
 
   font-family: Titan One;
@@ -66,7 +66,7 @@
   }
 }
 
-.footer__slogan--large-text {
+.footer .title {
   font-family: Titan One;
   font-weight: 400;
   font-size: 34px;
