pictures placed right

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -95,15 +95,12 @@ min-width: 324px;
 display: inline-flex;
 background-repeat: no-repeat;
 position: absolute;
-top: 32px;
+bottom: 0;
 justify-content:center;
 
 
 }
 
-.hero .container{background-color: var(--colorful-bg-color-one);
-    position: static;
-  }
 
 
      .hero-paragraph{
@@ -147,6 +144,7 @@ line-height: 90.5%;
 display:inline-flex;
 position: absolute;
 right: 34px;
+bottom: 0%;
 
 
 
@@ -161,6 +159,8 @@ transform: translateY(0);
 .counter-container{display: inline-flex;
 flex-direction: column;
 position: absolute;
+right: 34px;
+top: 14px;
 
 }
 
@@ -180,6 +180,8 @@ font-size: 8px;
 line-height: 1.25;
 color: var( --primary-light-bg-color);
 }
+
+
 
 
 }
