--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -163,7 +163,7 @@
     background-position: center;
     background-repeat: no-repeat;
     fill: $btn-background-color;
-    background-image: url(../images/icons/points.svg);
+    background-image: url(../images/products/points.svg);
   }
 }
 
