--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -16,7 +16,7 @@
             </li>
             <li class="contacts-cards__shedule-item">
             <h3 class="contactacts-cards__shedule-title">Saturday - Sunday</h3>
-            <p class="contactacts-cards__shedule-text>08:00 AM - 16:00 PM</p>
+            <p class="contactacts-cards__shedule-text">08:00 AM - 16:00 PM</p>
             </li>
            </ul>
             <ul class="contacts-cards__contacts-list">
@@ -50,7 +50,7 @@
                 <p class="contactacts-cards__shedule-text">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
-                <ul class=" contacts-cards__contacts-list">
+                <ul class="contacts-cards__contacts-list">
         
             <li class="contacts-cards__contacts-item">
                 <a href="tel:+380961111111" class="contacts-cards__contacts-link">
@@ -77,10 +77,10 @@
                 </li>
                 <li class="contacts-cards__shedule-item">
                     <h3 class="contactacts-cards__shedule-title">Saturday - Sunday</h3>
-                    <p class="contactacts-cards__shedule-text>08:00 AM - 16:00 PM</p>
+                    <p class="contactacts-cards__shedule-text">08:00 AM - 16:00 PM</p>
                             </li>
                         </ul>
-                        <ul class=" contacts-cards__contacts-list">
+                        <ul class="contacts-cards__contacts-list">
         
                 <li class="contacts-cards__contacts-item">
                     <a href="tel:+380961111111" class="contacts-cards__contacts-link">
@@ -97,5 +97,21 @@
             </ul>
         </li>
     </ul>
+    <ul class="buttons__list">
+        <li class="buttons__item">
+            <div>
+        <button type="button" class="contacts-btn location-btn">Our Locations</button>
+        <span class="location-btn__-icon"></span>
+        </div>
+        </li>
+        <li class="buttons__item">
+        <div>
+        <button type="button" class="contacts-btn franchise-button">Franchise</button>
+        <span class="footer__sign-icon"></span>
+        </div>
+        </li>
+    </ul>
+    
     </div>
 </section>
+
