--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,29 +1,54 @@
 .contacts-cards__section {
-  background-color: aqua;
+  background-image: linear-gradient(to bottom, #fff 15%, #fff5f6 75%);
+  
 }
-
 .contacts-cards__list {
   list-style: none;
   padding: 0;
   margin: 0;
   @media screen and (min-width: $tablet) {
     display: flex;
-    flex-wrap: wrap;
+    flex: wrap;
+    margin: -10px;
+  }
+  @media screen and (min-width: $desktop) {
+    display: flex;
     margin: -10px;
   }
 }
 
 .contacts-cards__item {
-  background-color: var(--white-color);
+  width: 100%;
+  max-height: auto;
+  padding-top: 43px;
+  padding-bottom: 43px;
+  padding-left: 20px;
+  padding-right: 21px;
+  background-color: $white-color;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
+
   @media screen and (max-width: 767px) {
     &:not(:last-child) {
       margin-bottom: 20px;
     }
-    @media screen and (min-width: $tablet) {
+    @media screen and (min-width: 768px) {
+      padding-top: 50px;
+      padding-bottom: 50px;
+      padding-left: 31px;
+  padding-right: 32px;
       margin: 10px;
-      width: calc((100% - 10px * 4) / 3);
+      width: calc((100% - 3*20px)/3);
+      
+    }
+    @media screen and (min-width: 1280px) {
+      padding-top: 50px;
+      padding-bottom: 50px;
+      padding-left: 44px;
+  padding-right: 43px;
+      margin: 10px;
+      width: calc((100% - 10px * 6) / 3);
+      
     }
   }
 }
@@ -42,19 +67,17 @@
 .contacts-cards__main-title:nth-child(1) {
   background-color: #f0d1a5;
   border-radius: 4px;
-}
-.contacts-cards__main-title:nth-child(2) {
-  background-color: #c2e297;
-  border-radius: 4px;
+  max-width: 80px;
+  @media screen and (min-width: 768px) {
+    max-width: 73px;
+  }
+
 }
 
-.contacts-cards__main-title:nth-child(3) {
-  background-color: #f0d1a5;
+.contacts-cards__main-title:nth-child(2) {
+  background-color: $milkshake-color;
   border-radius: 4px;
 }
-/*.contacts-cards__main-title:nth-child(2n + 1) {
-  background-color: #f0d1a5;
-}*/
 
 .contactacts-cards__title {
   font-weight: 500;
@@ -62,14 +85,47 @@
   line-height: 1.83;
   margin-bottom: 10px;
   letter-spacing: 0.04em;
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+  line-height: 1.86;
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 16px;
+  line-height: 1.88;
+  }
 }
 
 .contacts-cards__text {
+  max-width: 179px;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.5;
   margin-bottom: 50px;
   color: #907e82;
+  @media screen and (min-width: 768px) {
+    max-width: 145px;
+    font-size: 14px;
+  line-height: 1.64;
+  }
+  @media screen and (min-width: $desktop) {
+    max-width: 243px;
+    font-size: 16px;
+  line-height: 1.81;
+  letter-spacing: 0.04em;
+  }
+}
+
+
+
+
+.contacts-cards__shedule-list {
+  margin-bottom: 50px;
+   @media screen and (min-width: 768px) {
+     margin-bottom: 60px;
+   }
+   @media screen and (min-width: $desktop) {
+    margin-bottom: 64px;
+  }
 }
 
 .contacts-cards__shedule-item:not(:last-child) {
@@ -82,6 +138,15 @@
   line-height: 1.22;
   margin-bottom: 10px;
   color: #000000;
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+  line-height: 1.86;
+     
+   }
+   @media screen and (min-width: $desktop) {
+   font-size: 16px;
+  line-height: 1.88;
+  }
 }
 .contactacts-cards__shedule-text {
   font-weight: 500;
@@ -90,10 +155,79 @@
 
   color: #ffa5ba;
 }
+
+
 .contacts-cards__contacts-link {
+  position: relative;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.5;
 
   color: $secondary-text-color;
+}
+
+.contacts-cards__contacts-link::before {
+  position: absolute;
+  border: 2px solid red;
+}
+
+.buttons__list {
+  @media screen and (max-width: 767px) {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 54px;
+  }
+  @media screen and (min-width: $tablet) {
+    margin-top: 86px;
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.buttons__item:not(:last-child) {
+  margin-bottom: 10px;
+  @media screen and (min-width: $tablet) {
+    margin-right: 14px;
+  }
+}
+
+.contacts-btn {
+  
+  font-weight: 700;
+font-size: 16px;
+line-height: 1.31;
+display: flex;
+align-items: center;
+text-align: center;
+
+  border: none;
+  border-radius: 22px;
+  height: 44px;
+  min-width: 115px;
+  padding-left: 17px;
+  padding-right: 17px;
+  cursor: pointer;
+  @media screen and (min-width: $tablet) {
+    min-width: 174px;
+    padding-left: 38px;
+  padding-right: 38px;
+    
+  }
+  @media screen and (min-width: $desktop) {
+      min-width: 198px;
+      padding-left: 39px;
+  padding-right: 39px;
+    }
+}
+
+.location-btn {
+  color: #fff;
+  background-color: #D41342;
+
+}
+
+.franchise-button {
+  color: #D41443;
+  background-color: #fff;
 }
