--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -237,6 +237,12 @@
   .section-padding {
     padding-top: 132px;
   }
+
+  .contacts {
+    background-image: linear-gradient
+    (to bottom, #E5E5E5,#FFF5F6),
+   url(/images/sectionbg.png);
+  }
   
   .contacts-restaurants {
     margin: -15.5px;
