комментирует список кнопок

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -97,7 +97,7 @@
             </ul>
         </li>
     </ul>
-    <ul class="buttons__list">
+   <!--<ul class="buttons__list">
         <li class="buttons__item">
             <div>
         <button type="button" class="contacts-btn location-btn">Our Locations</button>
@@ -110,7 +110,7 @@
         <span class="footer__sign-icon"></span>
         </div>
         </li>
-    </ul>
+    </ul>-->
     
     </div>
 </section>
