--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -51,6 +51,7 @@
   <div class="footer-separator"></div>
 
   <div class="footer-copyright-container container">
-    <p class="footer-copyright">&#169;2019 - Ice Cream. All Rights Reserved.</p>
+    <p class="footer-copyright1">&#169;2019 - Ice Cream. All Rights Reserved.</p>
+    <p class="footer-copyright2">&#169;2019 - Ice Cream.<br>All Rights Reserved.</p>
   </div>
 </footer>
