изменяет цвет заголовка второй карточки

--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -64,7 +64,7 @@
 
   color: #fff;
 }
-.contacts-cards__main-title:nth-child(1) {
+.contacts-cards__main-title {
   background-color: #f0d1a5;
   border-radius: 4px;
   max-width: 80px;
@@ -74,9 +74,21 @@
 
 }
 
-.contacts-cards__main-title:nth-child(2) {
+.contacts-cards__foodtruck {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.83;
+
+  letter-spacing: 0.04em;
+
+  color: #fff;
   background-color: $milkshake-color;
   border-radius: 4px;
+  max-width: 130px;
+  @media screen and (min-width: 768px) {
+    max-width: 138px;
+  }
+
 }
 
 .contactacts-cards__title {
@@ -96,19 +108,19 @@
 }
 
 .contacts-cards__text {
-  max-width: 179px;
+ /* max-width: 179px;*/
   font-weight: 500;
   font-size: 12px;
   line-height: 1.5;
   margin-bottom: 50px;
   color: #907e82;
   @media screen and (min-width: 768px) {
-    max-width: 145px;
+    /*max-width: 145px;*/
     font-size: 14px;
   line-height: 1.64;
   }
   @media screen and (min-width: $desktop) {
-    max-width: 243px;
+   /* max-width: 243px;*/
     font-size: 16px;
   line-height: 1.81;
   letter-spacing: 0.04em;
