обенул лишки в дивы

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -39,12 +39,16 @@
   </div>
   <ul>
     <li>
-      <h3>16</h3>
-      <p>cafes</p>
+      <div>
+        <h3>16</h3>
+        <p>cafes</p>
+      </div>
     </li>
     <li>
-      <h3>23</h3>
-      <p>food trucks</p>
+      <div>
+        <h3>23</h3>
+        <p>food trucks</p>
+      </div>
     </li>
   </ul>
 </section>
