--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -2,6 +2,10 @@
     background-color: var(--bg-secondary-color);
     position: relative;
 
+    & .container {
+        margin-top: 113px;
+    }
+
     &::after {
         content: "";
         display: block;
@@ -99,6 +103,10 @@
 }
 
 @media screen and (min-width: 768px) {
+    .footer .container {
+        margin-top: 158px;
+    }
+
     .footer::after {
         bottom: 74px;
     }
@@ -153,6 +161,10 @@
 }
 
 @media screen and (min-width: 1280px) {
+    .footer .container {
+        margin-top: 165px;
+    }
+
     .footer::after {
         bottom: 45px;
     }
