--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -106,6 +106,7 @@
     .container{
       display: flex;
       justify-content: space-between;
+      margin-bottom:91px;
     }
 
     &__text{
@@ -117,11 +118,11 @@
       font-size: 26px;
       line-height: 1.154;
       letter-spacing: 0.04em;
+      margin-bottom:16px;
     }
 
     &__text-slog{
       font-size: 48px;
-      line-height: 55px;
       letter-spacing: 0.06em;
     }
 
@@ -131,14 +132,20 @@
       line-height: 1,857;
     }
     
-
     &__copyright-text{
       width: 316px;
-      
-      
       font-size: 14px;
       line-height: 1.5;
       letter-spacing: 0.02em;
+    }
+
+    &__social-link {
+     width: 34px;
+    height: 34px;
+    }
+
+    &__copyright{
+      min-height:73px;
     }
   }
 }
