--- a/src/sass/layout/_mobile-menu.scss
+++ b/src/sass/layout/_mobile-menu.scss
@@ -74,6 +74,8 @@
   line-height: 1.286;
   color: var(--color-design-white);
 
+  transition: color 250ms linear;
+
   &--current {
     color: var(--color-design-main);
   }
