добавил позиционирование картинок+бэкграунд на Дэск. в "About"

--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -83,8 +83,6 @@
   margin-right: auto;
 }
 
-// @media screen and (min-width: 320px) {
-// }
 @media screen and (min-width: 768px) {
   .title-container {
     max-width: 768px;
@@ -162,49 +160,51 @@
 }
 
 @media screen and (min-width: 1200px){
-  .about-container{
-  background-image: url(../images/images/about/backgraund-img/backmilkDecktop@1x.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-  }
-
   .text-about{
     margin-left: 75px;
     margin-bottom: 145px;
   }
-
   .title-container {
     max-width: 1200px;
   }
-
   .about-description{
     font-size: 30px;
     line-height: 34px;
   }
-
-
   .title{
     font-size: 58px;
     line-height: 66px;
   }
-
   .about-paragraph{
-    max-width: 460px;
+    max-width: 463px;
+    max-height: 79px;
     font-size: 16px;
-    line-height: 28px;
+    line-height: 1,75;
+    letter-spacing: 0.04em;
     margin-bottom: 35px;
-
   }
-  
   .about-text{
-    max-width: 460px;
+    max-width: 463px;
+    max-height: 155px;
     font-size: 14px;
     line-height: 1.9;
+    letter-spacing: 0.04em;
   }
-
   .about-btn {
-    margin-top: 35px;
+    margin-top: 45px;
   }
-
+  .img-container{
+    max-width: 516px;
+    margin-right: 0px;
+  }
+  .about {
+  background-color: $bg-light-pink;
+  align-items: center;
+  padding-top: 125px;
+  padding-bottom: 18px;
+  background-image: url(../images/images/about/backgraund-img/backmilkDecktop@1x.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: right 0px bottom 0px;
+}
 }
