повесила якоря на ссылки для скролла (не до конца)

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,5 @@
 <!-- ABOUT-SECTION -->
-<section class="about">
+<section class="about" id="how">
     <div class="container">
         <!-- ABOUT --- TEXT BEFORE TITLE -->
         <p class="about-pretitle">tradition and love</p>
