--- a/src/partials/advanteges.html
+++ b/src/partials/advanteges.html
@@ -1,4 +1,4 @@
-<section class="advantages">
+<section class="advantages" id="advantages">
     <div class="container">
     <div>
         <h3 hidden>advantages</h3> </div>
