--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -1,4 +1,4 @@
-<section class="page-header">
+<section class="page-header" id="home">
     <div class="container page-header_container">
         <nav class="navigation">
             <div class="navigation__container">
@@ -34,27 +34,27 @@
             
                 <ul class="menu-nav">
                     <li class="menu-nav__item">
-                        <a class="menu-nav__link" href="">
+                        <a class="menu-nav__link" href="#home">
                             Home
                         </a>
                     </li>
                     <li class="menu-nav__item">
-                        <a class="menu-nav__link" href="">
+                        <a class="menu-nav__link" href="#advantages">
                             About us
                         </a>
                     </li>
                     <li class="menu-nav__item">
-                        <a class="menu-nav__link" href="">
+                        <a class="menu-nav__link" href="#how">
                             How it’s made?
                         </a>
                     </li>
                     <li class="menu-nav__item">
-                        <a class="menu-nav__link" href="">
+                        <a class="menu-nav__link" href="#products">
                             Our products
                         </a>
                     </li>
                     <li class="menu-nav__item">
-                        <a class="menu-nav__link" href="">
+                        <a class="menu-nav__link" href="#contacts">
                             Contact
                         </a>
                     </li>
