фикс позиционирования мобильного меню

--- a/src/sass/layout/_mobile.scss
+++ b/src/sass/layout/_mobile.scss
@@ -5,12 +5,12 @@
     box-sizing: border-box;
     flex-direction: column;
     position: fixed;
-    width: 100%;
-    max-width: 255px;
+    width: 70%;
+    //max-width: 255px;
     height: 100vh;
     top: 0;
     left: 50%;
-    transform: translateX(-300%) translateY(0%);
+    transform: translateX(-140%) translateY(0%);
     visibility: hidden;
     pointer-events: none;
     overflow: scroll;
@@ -23,7 +23,7 @@
     box-shadow: (-8px 0px 20px rgba(0, 0, 0, 0.25));
 
     &.is-open {
-        transform: translateX(-225%) translateY(0%);
+        transform: translateX(-70%) translateY(0%);
         visibility: visible;
         pointer-events: visible;
     }
