добавляет плавную прокрутку

--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'DM Sans';
   color: #000000;
@@ -38,17 +42,15 @@ img {
   width: 100%;
   // max-width: 480px;
 
-  @media screen and(min-width:$mobile)  {
-   width: 480px;
+  @media screen and(min-width:$mobile) {
+    width: 480px;
   }
 
-  @media screen and(min-width:$tablet)  {
+  @media screen and(min-width:$tablet) {
     width: 768px;
     padding-right: 34px;
     padding-left: 34px;
-   }
-
-
+  }
 
   @media screen and(min-width:$desktop) {
     width: $desktop;
