--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -25,7 +25,15 @@
                 <p class="hero__description">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 </p>
-                <button type="button" class="hero__button"></button>
+
+                <div class="hero__button">
+                <svg class="products__arrow" width="9" height="8">
+                    <use href="./images/svg/sprites.svg#icon-arrow-right2"></use>
+                </svg>
+                <svg class="products__close" width="9" height="8">
+                    <use href="./images/svg/sprites.svg#icon-close"></use>
+                </svg>
+                </div>
             </div>
 
             <div class="counter__thumb">
