--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -150,38 +150,31 @@
 }
 
 &__button {
-  @media screen and (min-width: $tablet) {
-    display: block;
+  position: relative;
     cursor: pointer;
     z-index: 1;
-    width: 18px;
-    height: 18px;
+    width: 26px;
+    height: 26px;
     border: 0;
     border-radius: 50%;
-    background-image: url('../images/2-hero/tablet/hero-arrow-768-1x.webp');
 
-    // @media screen and (min-device-pixel-ratio: 2) and (min-width: $tablet),
-    // screen and (min-resolution: 192dpi) and (min-width: $tablet),
-    // screen and (min-resolution: 2dppx) and (min-width: $tablet) {
-    //   background-image: url('../images/2-hero/tablet/hero-arrow-768@2x.webp');
-    // }
-
-    @media screen and (min-width: $desktop) {
-      width: 26px;
-      height: 26px;
-      background-image: url('../images/2-hero/desktop/hero-arrow-1200-1x.webp');
-    }
-
-    // @media screen and (min-device-pixel-ratio: 2) and (min-width: $desktop),
-    // screen and (min-resolution: 192dpi) and (min-width: $desktop),
-    // screen and (min-resolution: 2dppx) and (min-width: $desktop) {
-    //   background-image: url('../images/2-hero/desktop/hero-arrow-1200@2x.webp');
-    // }
-
-    transition: transform $time-main $timing-function-main,
-      box-shadow $time-main $timing-function-main;
-  }
+    color: var(--accent-primary-color);
+    background-color: var(--light-text-color);
+  
+    transition: background-color $time-main $timing-function-main,
+                color $time-main $timing-function-main,
+                transform $time-main $timing-function-main,
+                box-shadow $time-main $timing-function-main;
 }
+
+  &__button:hover,
+  &__button:focus {
+    background-color: var(--accent-primary-color);
+    color: var(--light-text-color);
+    -webkit-box-shadow: 1px 0px 8px 0px rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: 1px 0px 8px 0px rgba(34, 60, 80, 0.2);
+    box-shadow: 1px 0px 8px 0px rgba(34, 60, 80, 0.2);
+  }
 }
 .compositions-links {
   display: flex;
