--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -205,6 +205,6 @@
   background-image: url(../images/images/about/backgraund-img/backmilkDecktop@1x.png);
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: right 0px bottom 0px;
+  background-position: center;
 }
-}
+} 
