--- a/src/sass/_page-hero.scss
+++ b/src/sass/_page-hero.scss
@@ -5,6 +5,7 @@
   margin: 0 auto;
   position: relative;
   overflow: hidden;
+  background-color: $bg-hero;
 }
 .page-hero .container {
   display: flex;
@@ -85,16 +86,20 @@
 
 .hero-description_right-side{
   & .button-products{
-    width: 14px;
-    height: 14px;
+    width: 18px;
+    height: 18px;
     justify-self: flex-start;
     align-self: start;
+  }
+  & .right-arrow{
+    font-size: 8px;
   }
   display: flex;
   flex-direction: column;
 }
 
 .milk-description{
+  margin-bottom: 10px;
   display: block;
   width: 114px;
   height: 48px;
