--- a/src/sass/_page-header.scss
+++ b/src/sass/_page-header.scss
@@ -6,6 +6,8 @@
   @media screen and (min-width: 768px) {
     padding-top: 36px;
   }
+
+  background-color: $bg-hero;
 }
 .page-header .container {
   display: flex;
