Added title to customer-reviews

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,4 +1,5 @@
 <section class="customer-reviews">
+  <h2 class="is-hidden">Customer reviews</h2>
   <div class="container">
     <!-- Slider main container -->
     <div class="swiper-container">
