Добавляю позиционирование Картинок и их версии 1х/2х + резиновый бэкграунд на десктопе

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,30 +1,44 @@
 <section class="about">
     <div class="container">
-            <p class="subtitle">tradition and love</p>
+        <div class="title-container">
+            <p class="about-description">tradition and love</p>
             <h2 class="title">how it’s made?</h2>
-
-   
-    <div class="about-container">
-        <div class="img-container">
-            <img class="about-img" 
-            srcset="./images/images/about/bio-eco/biomilkDecktop@1x.png 1x, ./images/images/about/bio-eco/biomilkDecktop@2x.png 2x" 
-            src="./images/images/about/bio-eco/biomilkDecktop@1x.png" alt="biomilk">
         </div>
+        <div class="about-container">
+            <div class="img-container">
+                <picture>
+                    <source
+                        srcset="./images/images/about/bio-eco/biomilkDecktop@1x.png 1x, ./images/images/about/bio-eco/biomilkDecktop@2x.png 2x"
+                        media="(min-width: 1200px)">
+                    <source
+                        srcset="./images/images/about/bio-eco/biomilkTablet@1x.png 1x, ./images/images/about/bio-eco/biomilkTablet@2x.png 2x"
+                        media="(min-width: 768px)">
+                    <source
+                        srcset="./images/images/about/bio-eco/biomilkMobile@1x.png 1x, ./images/images/about/bio-eco/biomilkMobile@2x.png 2x"
+                        media="(min-width: 320px)">
+                    <img class="about-img" src="./images/images/about/bio-eco/biomilkMobile@1x.png" alt="biomilk">
+                </picture>
 
-        <div class="about-right-side">
-        <p class="about-paragraph">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus,
-            faucibus lorem eget, egestas eros.
-            Maecenas eleifend erat at justo fringilla.</p>
-      
-            <p class="about-text">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris
-                rhoncus
-                orci in imperdiet placerat.
-                Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
-                <span class="about-text-span">Aliquam erat volutpat. Aenean accumsan.</span>
-         
-            </p>
             </div>
-            <button class="main-button about-btn" type="button">Read more<span class="arrow-btn">&gt;</span></button>
+            <div class="text-about">
+                <p class="about-paragraph">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+                    cursus,
+                    faucibus lorem eget, egestas eros.
+                    Maecenas eleifend erat at justo fringilla.</p>
+                <div class="about-background">
+                    <p class="about-text">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris
+                        rhoncus
+                        orci in imperdiet placerat.
+                        Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+                        tincidunt.
+                        <br>
+                        <br>
+                        Aliquam erat volutpat. Aenean accumsan.
+                    </p>
+                </div>
+                <button class="main-button about-btn" type="button">Read more<span
+                        class="arrow-btn">&gt;</span></button>
+            </div>
+        </div>
     </div>
-</div>
 </section>
