Закончил модальное окно

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,5 @@
-<section class="about" id="about">
+<section class="about-section">
+<div class="about" id="about">
         <div class="container">
             <p class="about-subtitle">tradition and love</p>
             <h2 class="titles">how it’s made?</h2>
@@ -56,5 +57,5 @@
                 </button>
                 </div>
             </div>
-        </div>
+        </div></div>    
         </section>
