--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,8 +1,12 @@
+.about-section{
+  background-color: var(--backgroundPink);
+}
+
 .about {
   max-width: 1600px;
   margin: 0 auto;
   text-align: center;
-  background-color: var(--backgroundPink);
+
   padding-top: 130px;
 
   color: #907e82;
@@ -123,6 +127,7 @@
     }
   }
   @media screen and (min-width: 1280px) {
+    padding-right: 10px;
     width: 460px;
     padding-left: 34px;
     padding-top: 35px;
@@ -150,6 +155,7 @@
     }
   }
   @media screen and (min-width: 1280px) {
+    
     font-size: 14px;
     line-height: 1.928;
     margin-bottom: 45px;
