--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -4,7 +4,7 @@
 
 @media screen and (max-width: 767px) {
   .advantages {
-    padding-bottom: 145px;
+    padding-bottom: 97px;
   }
   .advantages .titles {
     margin: 16px 0 18px 0;
@@ -14,6 +14,7 @@
     line-height: 1.666;
   }
   .advantages-list-item {
+    width: 230px;
     &:not(:last-child) {
       margin-bottom: 38px;
     }
@@ -22,7 +23,7 @@
 
 @media screen and (min-width: 768px) {
   .advantages {
-    padding-bottom: 242px;
+    padding-bottom: 140px;
   }
   .advantages-list {
     display: flex;
