--- a/src/sass/_page-hero.scss
+++ b/src/sass/_page-hero.scss
@@ -58,9 +58,18 @@
 }
 @media screen and (min-width:768px){
 .page-hero{
-  padding-bottom: 45px;
+  padding-bottom: 28px;
   padding-top: 15px;
   overflow: visible;
+}
+
+.hero-title {
+  font-size: 22px;
+  width: 162px;
+}
+
+.hero-title-accent{
+  font-size: 34px;
 }
 
 .circle{
@@ -71,7 +80,7 @@
 }
   .hero-img{
     left: 160px;
-    bottom: -45px;
+    bottom: -28px;
   }
 
   .hero-button{
@@ -80,7 +89,7 @@
 
   .hero-description{
     display: flex;
-    align-items: center;
+    align-items: flex-end;
   }
 }
 
