добавил текст при ховере на стрелку

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -14,11 +14,19 @@
             eiusmod tempor incididunt ut labore et. dolore magna aliqua
             facilisis.
           </p>
-          <button class="products-button" type="button">
-            <svg class="arrow-icon">
-              <use href="./images/sprite.svg#icon-arrow-right"></use>
-            </svg>
-          </button>
+          <div class="dropdown">
+            <button class="products-button" type="button">
+              <svg class="arrow-icon">
+                <use href="./img/sprite.svg#icon-arrow-right"></use>
+              </svg>
+              <div class="dropdown-content">
+                <p>
+                  В каждую упаковку мы добавляем горсть грецких орехов. Как
+                  много их будет зависит от того, кто делал мороженное.
+                </p>
+              </div>
+            </button>
+          </div>
         </div>
       </li>
 
@@ -33,11 +41,19 @@
             eiusmod tempor incididunt ut labore et. dolore magna aliqua
             facilisis.
           </p>
-          <button class="products-button" type="button">
-            <svg class="arrow-icon">
-              <use href="./images/sprite.svg#icon-arrow-right"></use>
-            </svg>
-          </button>
+          <div class="dropdown">
+            <button class="products-button" type="button">
+              <svg class="arrow-icon">
+                <use href="./img/sprite.svg#icon-arrow-right"></use>
+              </svg>
+              <div class="dropdown-content">
+                <p>
+                  В каждую упаковку мы добавляем горсть грецких орехов. Как
+                  много их будет зависит от того, кто делал мороженное.
+                </p>
+              </div>
+            </button>
+          </div>
         </div>
       </li>
 
@@ -54,11 +70,19 @@
             eiusmod tempor incididunt ut labore et. dolore magna aliqua
             facilisis.
           </p>
-          <button class="products-button" type="button">
-            <svg class="arrow-icon">
-              <use href="./images/sprite.svg#icon-arrow-right"></use>
-            </svg>
-          </button>
+          <div class="dropdown">
+            <button class="products-button" type="button">
+              <svg class="arrow-icon">
+                <use href="./img/sprite.svg#icon-arrow-right"></use>
+              </svg>
+              <div class="dropdown-content">
+                <p>
+                  В каждую упаковку мы добавляем горсть грецких орехов. Как
+                  много их будет зависит от того, кто делал мороженное.
+                </p>
+              </div>
+            </button>
+          </div>
         </div>
       </li>
     </ul>
