--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -1,11 +1,13 @@
 .gallery{
     display: flex;
     justify-content: center;
-    background-color: #ffffff;
+    background: linear-gradient(180deg, rgba(255,245,246,1) 40%,
+     rgba(255,255,255,1) 40%);
 }
 
 
 .rewiew{
+
     padding: 80px 20px 128px 20px;  
     background-color: #ffffff;
 
@@ -17,6 +19,10 @@
         min-height: 350px;
         
     }
+}
+
+.reviews-slide{
+    position: relative;
 }
 
 .rewiewer-image{
@@ -31,23 +37,27 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 2.583;
-    letter-spacing: 0.04em;
-    text-decoration: underline #E1E1E1;
+    letter-spacing: 0.04em;  
+   
+    background-color: #FAFAFA; 
     
-
-    background-color: #FAFAFA;
-    background-image: url('../images/reviews/reviews-quotes.svg');
-    background-repeat: no-repeat;
-    background-size: 54px;
-    background-position: top 32px left 50px;
     padding: 43px 66px 26px 57px;
-    margin-bottom: 30px;    
+    margin-bottom: 30px;  
+    z-index: 1; 
+}
+
+.review-text::before{
+    position: absolute;
+    content: url('../images/reviews/reviews-quotes.svg');
+    z-index: -1;
+    top: 28px;
+    left: 61px;
 }
 
 .rewiew-text-element{
-    padding-bottom: 7px;
-    border-bottom: solid 1px #E1E1E1;  
-}
+    background-image: repeating-linear-gradient(
+        to bottom, transparent, transparent 90%, #E1E1E1 100%);
+} 
 
 .reviewers-name{
     font-family: DM Sans;
@@ -59,82 +69,78 @@
         content: url('../images/reviews/reviews-group.svg');
         display: block;
         margin-bottom: 18px;     
-    }
+    }   
+}
 
-    &::after{        
-        content: url("../images/reviews/dots-icon.svg");
-        display: block;
-        margin-top: 30px;
-        
+.slick-list {
+    overflow: hidden;
+}
+
+.slick-track{
+    display: flex;
+}
+
+.my-dots{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.my-dots li{
+    padding: 0;
+    position: relative;
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    cursor: pointer;
+    margin-top: 30px;
+}   
+
+.my-dots li:nth-child(2){
+    margin-left: 18px;
+    margin-right: 18px;
+}
+
+/* Элемент точки */
+.my-dots li button{
+    position: absolute;
+    left: -5px;
+    font-size: 0;
+    line-height: 0;
+    display: block;
+    width: 12px;
+    height: 12px;
+    padding: 5px;
+    cursor: pointer;
+    color: transparent;
+    border: 0;
+    outline: none;
+    background: transparent;
+
+    .my-dots li &:hover,
+    .my-dots li &:focus {
+        outline: none;
     }
+   
+}
+
+.my-dots li button:before {
+    width: 12;
+    height: 12;
+    content: url('../images/reviews/reviews-dot.svg');
+    fill: black;
+    text-align: center;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    
+}
+
+.my-dots li.slick-active button:before{
+    width: 12;
+    height: 12;
+    content: url('../images/reviews/reviews-home.svg');
 }
 
 
-// .slick-list {
-//     overflow: hidden;
-// }
-
-// .slick-track{
-//     display: flex;
-// }
-
-// .my-dots{
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-// }
-// .my-dots li{
-//     padding: 0;
-//     position: relative;
-//     display: inline-block;
-//     width: 12px;
-//     height: 12px;
-//     cursor: pointer;
-// }   
-
-// .my-dots li:nth-child(2){
-//     margin: 18px ;
-// }
-
-// /* Элемент точки */
-// .my-dots li button{
-//     position: absolute;
-//     left: -5px;
-//     font-size: 0;
-//     line-height: 0;
-//     display: block;
-//     width: 12px;
-//     height: 12px;
-//     padding: 5px;
-//     cursor: pointer;
-//     color: transparent;
-//     border: 0;
-//     outline: none;
-//     background: transparent;
-
-//     .my-dots li &:hover,
-//     .my-dots li &:focus {
-//         outline: none;
-//     }
-
-
-//     .my-dots li &:before {
-//         width: 12;
-//         height: 12;
-//         content: url('../images/reviews/reviews-dot.svg');
-//         text-align: center;
-//         -webkit-font-smoothing: antialiased;
-//         -moz-osx-font-smoothing: grayscale;
-        
-//     }
-
-// }
-
-//   .my-dots li.slick-active button:before{
-//     width: 12;
-//     height: 12;
-//     content: url('../images/reviews/reviews-home.svg');
-//   }
 @media screen and (min-width: 768px){
     .rewiew{
         
@@ -151,6 +157,11 @@
         line-height: 2.142;
         padding: 47px 88px 34px 80px;
     }
+    .review-text::before{
+        top: 30px;
+        left: 40px;
+    }
+
     .reviewers-name{
         font-size: 16px;
         line-height: 1.185;
@@ -158,13 +169,12 @@
         &::before{
             margin-bottom: 14px;     
         }
-    
-        &::after{        
-           margin-top: 35px;
-            
-        }
     }
 }
+
+.my-dots li{
+   margin-top: 35px;
+}   
 
 
 @media screen and (min-width: 1200px){
@@ -183,6 +193,12 @@
     line-height: 1.875;
     padding: 47px 88px 39px 88px;
     }
+
+    .review-text::before{
+        top: 32px;
+        left: 50px;
+    }
+
     .reviewers-name{
         font-size: 20px;
         line-height: 1.850;
