исправил размеры и позицию кнопки и добавил курсор-поинтер

--- a/src/partials/up-button.html
+++ b/src/partials/up-button.html
@@ -1,5 +1,5 @@
 <div class="up-button" id="backToTop">
-    <svg class="up-button__icon" width="30" height="30">
+    <svg class="up-button__icon">
         <use href="./images/svg/sprites.svg#icon-circle-up"></use>
       </svg>
 </div>
