--- a/src/sass/components/_up-button.scss
+++ b/src/sass/components/_up-button.scss
@@ -1,12 +1,12 @@
 .up-button {
     position: fixed;
-    bottom: 40px;
-    right: 40px;
+    bottom: 15px;
+    right: 20px;
     z-index: 100;
+    cursor: pointer;
+    overflow: visible;
 
-    width: 30px;
-    height: 30px;
-
+    border: 0;
     border-radius: 50%;
 
     transition: opacity $time-main $timing-function-main,
@@ -15,6 +15,12 @@
 
     &__icon {
         fill: var(--accent-primary-color);
+        width: 20px;
+        height: 20px;
+        @media (min-width: $tablet) {
+            width: 30px;
+            height: 30px;
+        }
     }
 
     &:hover,
@@ -23,5 +29,8 @@
         transform: scale(1.05);
     }
 
-
+    @media (min-width: $tablet) {
+        bottom: 20px;
+        right: 25px;
+    }
 }
