--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -43,11 +43,14 @@
 
   &::after {
     content: '';
+    position: absolute;
     display: block;
     width: 26px;
     height: 6px;
     margin: 30px auto;
     background-image: url('../images/products/ellipse.png');
+   
+
   }
 }
 
