--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -9,3 +9,12 @@
 
 /* === burger styles === */
 @import './flip-btn';
+
+/* === backdrop styles === */
+@import './backdrop';
+
+/* === Is-hidden style === */
+@import './utils/is-hidden';
+
+/* === about-modal === */
+@import './about-modal';
