--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,56 +1,60 @@
 <section class="contacts section-padding">
-    <h2 class="visually-hiden">Contacts</h2>
+    <h2 class="contacts-visually-hidden">Contacts</h2>
     <div class="container">
-        <ul class="restorans">
-            <li class="adress-information">
-                <p class="item-cafe">CAFE</p>
-                <p class="name-cafe">Chicago</p>
-                <p class="cafe-description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                <p class="cafe-work-weekdays">Monday - Friday 
-                    06:00 AM - 10:00 PM</p>
-                <p class="cafe-work-weekend">Saturday - Sunday
-                     08:00 AM - 16:00 PM</p>
-            <address class="adress">
-                <ul>
-                    <li class="contact-tel">
-                        <a class="contact-information-tel" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
-                    </li>
-                    <li class="contact-mail">
-                        <a class="contact-information-mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
-                    </li>
-                    </ul>
-            </address>
-                    </li>
-                    <li class="adress-information">
-                <p class="item-cafe">FOODTRUCK</p>
-                <p class="name-cafe">Los Angeles</p>
-                <p class="cafe-description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                <p class="cafe-work-weekdays">Monday - Friday 06:00 AM - 10:00 PM</p>
-                <p class="cafe-work-weekend">Saturday - Sunday 08:00 AM - 16:00 PM</p>
-                <address class="adress">
+        <ul class="contacts-restaurants">
+            <li class="contacts-address-information">
+                <p class="contacts-item-cafe">CAFE</p>
+                <p class="contacts-name-cafe">Chicago</p>
+                <p class="contacts-cafe-description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                <p class="contacts-cafe-work-days">Monday - Friday</p>
+                <p class="contacts-cafe-work-houers">06:00 AM - 10:00 PM</p>
+                <p class="contacts-cafe-work-days">Saturday - Sunday</p>
+                <p class="contacts-cafe-work-houers">08:00 AM - 16:00 PM</p>
+                <address class="contacts-address">
                     <ul>
                         <li class="contact-tel">
-                            <a class="contact-information-tel" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
+                            <a class="contact-information" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
                         </li>
                         <li class="contact-mail">
-                            <a class="contact-information-mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
+                            <a class="contact-information" href="mailto:noreply@envato.com">noreply@envato.com</a>
                         </li>
                     </ul>
                 </address>
             </li>
-            <li class="adress-information">
-                <p class="item-cafe">CAFE</p>
-                <p class="name-cafe">New York</p>
-                <p class="cafe-description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                <p class="cafe-work-weekdays">Monday - Friday 06:00 AM - 10:00 PM</p>
-                <p class="cafe-work-weekend">Saturday - Sunday 08:00 AM - 16:00 PM</p>
-                <address class="adress">
+            <li class="contacts-address-information">
+                <p class="contacts-item-cafe foodtruck">FOODTRUCK</p>
+                <p class="contacts-name-cafe">Los Angeles</p>
+                <p class="contacts-cafe-description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                <p class="contacts-cafe-work-days">Monday - Friday</p>
+                <p class="contacts-cafe-work-houers">06:00 AM - 10:00 PM</p>
+                <p class="contacts-cafe-work-days">Saturday - Sunday</p>
+                <p class="contacts-cafe-work-houers">08:00 AM - 16:00 PM</p>
+                <address class="contacts-address">
                     <ul>
                         <li class="contact-tel">
-                            <a class="contact-information-tel" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
+                            <a class="contact-information" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
                         </li>
                         <li class="contact-mail">
-                            <a class="contact-information-mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
+                            <a class="contact-information" href="mailto:noreply@envato.com">noreply@envato.com</a>
+                        </li>
+                    </ul>
+                </address>
+            </li>
+            <li class="contacts-address-information">
+                <p class="contacts-item-cafe">CAFE</p>
+                <p class="contacts-name-cafe">New York</p>
+                <p class="contacts-cafe-description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                <p class="contacts-cafe-work-days">Monday - Friday</p>
+                <p class="contacts-cafe-work-houers">06:00 AM - 10:00 PM</p>
+                <p class="contacts-cafe-work-days">Saturday - Sunday</p>
+                <p class="contacts-cafe-work-houers">08:00 AM - 16:00 PM</p>
+                <address class="contacts-address">
+                    <ul>
+                        <li class="contact-tel">
+                            <a class="contact-information" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
+                        </li>
+                        <li class="contact-mail">
+                            <a class="contact-information" href="mailto:noreply@envato.com">noreply@envato.com</a>
                         </li>
                     </ul>
                 </address>
@@ -58,12 +62,13 @@
         </ul>
         <ul class="contacts-button">
             <li class="contacts-button-item">
-                <button type="submit" class="button-location button">Our Locations</button>
+                <button type="submit" class="button-location button">Our Locations &ensp;&#10095;
+                </button>
             </li>
             <li class="contacts-button-item">
-                <button type="submit" class="button-franchise button">Franchise</button>
+                <button type="submit" class="button-franchise button">Franchise &ensp;&#10095;
+                </button>
             </li>
         </ul>
-    </div>    
+    </div>
 </section>
-
